test/Fail/Issue5728.err
Issue5728.agda:6.1-4: error: [TooFewPatternsInWithClause]
Too few arguments given in with-clause
when checking that the clause
test with Set
test
has type Set
